# fake_haproxy

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  release.yml  snapshot.yml
src/: async_stream.rs  error.rs  forwarder.rs  main.rs
